--- a/playground.ipynb
+++ b/playground.ipynb
@@ -135,318 +135,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "MusicgenConfig {\n",
-       "  \"_name_or_path\": \"facebook/musicgen-small\",\n",
-       "  \"architectures\": [\n",
-       "    \"MusicgenForConditionalGeneration\"\n",
-       "  ],\n",
-       "  \"audio_encoder\": {\n",
-       "    \"_name_or_path\": \"facebook/encodec_32khz\",\n",
-       "    \"add_cross_attention\": false,\n",
-       "    \"architectures\": [\n",
-       "      \"EncodecModel\"\n",
-       "    ],\n",
-       "    \"audio_channels\": 1,\n",
-       "    \"bad_words_ids\": null,\n",
-       "    \"begin_suppress_tokens\": null,\n",
-       "    \"bos_token_id\": null,\n",
-       "    \"chunk_length_s\": null,\n",
-       "    \"chunk_size_feed_forward\": 0,\n",
-       "    \"codebook_dim\": 128,\n",
-       "    \"codebook_size\": 2048,\n",
-       "    \"compress\": 2,\n",
-       "    \"cross_attention_hidden_size\": null,\n",
-       "    \"decoder_start_token_id\": null,\n",
-       "    \"dilation_growth_rate\": 2,\n",
-       "    \"diversity_penalty\": 0.0,\n",
-       "    \"do_sample\": false,\n",
-       "    \"early_stopping\": false,\n",
-       "    \"encoder_no_repeat_ngram_size\": 0,\n",
-       "    \"eos_token_id\": null,\n",
-       "    \"exponential_decay_length_penalty\": null,\n",
-       "    \"finetuning_task\": null,\n",
-       "    \"forced_bos_token_id\": null,\n",
-       "    \"forced_eos_token_id\": null,\n",
-       "    \"hidden_size\": 128,\n",
-       "    \"id2label\": {\n",
-       "      \"0\": \"LABEL_0\",\n",
-       "      \"1\": \"LABEL_1\"\n",
-       "    },\n",
-       "    \"is_decoder\": false,\n",
-       "    \"is_encoder_decoder\": false,\n",
-       "    \"kernel_size\": 7,\n",
-       "    \"label2id\": {\n",
-       "      \"LABEL_0\": 0,\n",
-       "      \"LABEL_1\": 1\n",
-       "    },\n",
-       "    \"last_kernel_size\": 7,\n",
-       "    \"length_penalty\": 1.0,\n",
-       "    \"max_length\": 20,\n",
-       "    \"min_length\": 0,\n",
-       "    \"model_type\": \"encodec\",\n",
-       "    \"no_repeat_ngram_size\": 0,\n",
-       "    \"norm_type\": \"weight_norm\",\n",
-       "    \"normalize\": false,\n",
-       "    \"num_beam_groups\": 1,\n",
-       "    \"num_beams\": 1,\n",
-       "    \"num_filters\": 64,\n",
-       "    \"num_lstm_layers\": 2,\n",
-       "    \"num_residual_layers\": 1,\n",
-       "    \"num_return_sequences\": 1,\n",
-       "    \"output_attentions\": false,\n",
-       "    \"output_hidden_states\": false,\n",
-       "    \"output_scores\": false,\n",
-       "    \"overlap\": null,\n",
-       "    \"pad_mode\": \"reflect\",\n",
-       "    \"pad_token_id\": null,\n",
-       "    \"prefix\": null,\n",
-       "    \"problem_type\": null,\n",
-       "    \"pruned_heads\": {},\n",
-       "    \"remove_invalid_values\": false,\n",
-       "    \"repetition_penalty\": 1.0,\n",
-       "    \"residual_kernel_size\": 3,\n",
-       "    \"return_dict\": true,\n",
-       "    \"return_dict_in_generate\": false,\n",
-       "    \"sampling_rate\": 32000,\n",
-       "    \"sep_token_id\": null,\n",
-       "    \"suppress_tokens\": null,\n",
-       "    \"target_bandwidths\": [\n",
-       "      2.2\n",
-       "    ],\n",
-       "    \"task_specific_params\": null,\n",
-       "    \"temperature\": 1.0,\n",
-       "    \"tf_legacy_loss\": false,\n",
-       "    \"tie_encoder_decoder\": false,\n",
-       "    \"tie_word_embeddings\": true,\n",
-       "    \"tokenizer_class\": null,\n",
-       "    \"top_k\": 50,\n",
-       "    \"top_p\": 1.0,\n",
-       "    \"torch_dtype\": \"float32\",\n",
-       "    \"torchscript\": false,\n",
-       "    \"trim_right_ratio\": 1.0,\n",
-       "    \"typical_p\": 1.0,\n",
-       "    \"upsampling_ratios\": [\n",
-       "      8,\n",
-       "      5,\n",
-       "      4,\n",
-       "      4\n",
-       "    ],\n",
-       "    \"use_bfloat16\": false,\n",
-       "    \"use_causal_conv\": false,\n",
-       "    \"use_conv_shortcut\": false\n",
-       "  },\n",
-       "  \"decoder\": {\n",
-       "    \"_name_or_path\": \"\",\n",
-       "    \"activation_dropout\": 0.0,\n",
-       "    \"activation_function\": \"gelu\",\n",
-       "    \"add_cross_attention\": false,\n",
-       "    \"architectures\": null,\n",
-       "    \"attention_dropout\": 0.0,\n",
-       "    \"audio_channels\": 1,\n",
-       "    \"bad_words_ids\": null,\n",
-       "    \"begin_suppress_tokens\": null,\n",
-       "    \"bos_token_id\": 2048,\n",
-       "    \"chunk_size_feed_forward\": 0,\n",
-       "    \"classifier_dropout\": 0.0,\n",
-       "    \"cross_attention_hidden_size\": null,\n",
-       "    \"decoder_start_token_id\": null,\n",
-       "    \"diversity_penalty\": 0.0,\n",
-       "    \"do_sample\": false,\n",
-       "    \"dropout\": 0.1,\n",
-       "    \"early_stopping\": false,\n",
-       "    \"encoder_no_repeat_ngram_size\": 0,\n",
-       "    \"eos_token_id\": null,\n",
-       "    \"exponential_decay_length_penalty\": null,\n",
-       "    \"ffn_dim\": 4096,\n",
-       "    \"finetuning_task\": null,\n",
-       "    \"forced_bos_token_id\": null,\n",
-       "    \"forced_eos_token_id\": null,\n",
-       "    \"hidden_size\": 1024,\n",
-       "    \"id2label\": {\n",
-       "      \"0\": \"LABEL_0\",\n",
-       "      \"1\": \"LABEL_1\"\n",
-       "    },\n",
-       "    \"initializer_factor\": 0.02,\n",
-       "    \"is_decoder\": false,\n",
-       "    \"is_encoder_decoder\": false,\n",
-       "    \"label2id\": {\n",
-       "      \"LABEL_0\": 0,\n",
-       "      \"LABEL_1\": 1\n",
-       "    },\n",
-       "    \"layerdrop\": 0.0,\n",
-       "    \"length_penalty\": 1.0,\n",
-       "    \"max_length\": 20,\n",
-       "    \"max_position_embeddings\": 2048,\n",
-       "    \"min_length\": 0,\n",
-       "    \"model_type\": \"musicgen_decoder\",\n",
-       "    \"no_repeat_ngram_size\": 0,\n",
-       "    \"num_attention_heads\": 16,\n",
-       "    \"num_beam_groups\": 1,\n",
-       "    \"num_beams\": 1,\n",
-       "    \"num_codebooks\": 4,\n",
-       "    \"num_hidden_layers\": 24,\n",
-       "    \"num_return_sequences\": 1,\n",
-       "    \"output_attentions\": false,\n",
-       "    \"output_hidden_states\": false,\n",
-       "    \"output_scores\": false,\n",
-       "    \"pad_token_id\": 2048,\n",
-       "    \"prefix\": null,\n",
-       "    \"problem_type\": null,\n",
-       "    \"pruned_heads\": {},\n",
-       "    \"remove_invalid_values\": false,\n",
-       "    \"repetition_penalty\": 1.0,\n",
-       "    \"return_dict\": true,\n",
-       "    \"return_dict_in_generate\": false,\n",
-       "    \"scale_embedding\": false,\n",
-       "    \"sep_token_id\": null,\n",
-       "    \"suppress_tokens\": null,\n",
-       "    \"task_specific_params\": null,\n",
-       "    \"temperature\": 1.0,\n",
-       "    \"tf_legacy_loss\": false,\n",
-       "    \"tie_encoder_decoder\": false,\n",
-       "    \"tie_word_embeddings\": false,\n",
-       "    \"tokenizer_class\": null,\n",
-       "    \"top_k\": 50,\n",
-       "    \"top_p\": 1.0,\n",
-       "    \"torch_dtype\": null,\n",
-       "    \"torchscript\": false,\n",
-       "    \"typical_p\": 1.0,\n",
-       "    \"use_bfloat16\": false,\n",
-       "    \"use_cache\": true,\n",
-       "    \"vocab_size\": 2048\n",
-       "  },\n",
-       "  \"is_encoder_decoder\": true,\n",
-       "  \"model_type\": \"musicgen\",\n",
-       "  \"text_encoder\": {\n",
-       "    \"_name_or_path\": \"t5-base\",\n",
-       "    \"add_cross_attention\": false,\n",
-       "    \"architectures\": [\n",
-       "      \"T5ForConditionalGeneration\"\n",
-       "    ],\n",
-       "    \"bad_words_ids\": null,\n",
-       "    \"begin_suppress_tokens\": null,\n",
-       "    \"bos_token_id\": null,\n",
-       "    \"chunk_size_feed_forward\": 0,\n",
-       "    \"classifier_dropout\": 0.0,\n",
-       "    \"cross_attention_hidden_size\": null,\n",
-       "    \"d_ff\": 3072,\n",
-       "    \"d_kv\": 64,\n",
-       "    \"d_model\": 768,\n",
-       "    \"decoder_start_token_id\": 0,\n",
-       "    \"dense_act_fn\": \"relu\",\n",
-       "    \"diversity_penalty\": 0.0,\n",
-       "    \"do_sample\": false,\n",
-       "    \"dropout_rate\": 0.1,\n",
-       "    \"early_stopping\": false,\n",
-       "    \"encoder_no_repeat_ngram_size\": 0,\n",
-       "    \"eos_token_id\": 1,\n",
-       "    \"exponential_decay_length_penalty\": null,\n",
-       "    \"feed_forward_proj\": \"relu\",\n",
-       "    \"finetuning_task\": null,\n",
-       "    \"forced_bos_token_id\": null,\n",
-       "    \"forced_eos_token_id\": null,\n",
-       "    \"id2label\": {\n",
-       "      \"0\": \"LABEL_0\",\n",
-       "      \"1\": \"LABEL_1\"\n",
-       "    },\n",
-       "    \"initializer_factor\": 1.0,\n",
-       "    \"is_decoder\": false,\n",
-       "    \"is_encoder_decoder\": true,\n",
-       "    \"is_gated_act\": false,\n",
-       "    \"label2id\": {\n",
-       "      \"LABEL_0\": 0,\n",
-       "      \"LABEL_1\": 1\n",
-       "    },\n",
-       "    \"layer_norm_epsilon\": 1e-06,\n",
-       "    \"length_penalty\": 1.0,\n",
-       "    \"max_length\": 20,\n",
-       "    \"min_length\": 0,\n",
-       "    \"model_type\": \"t5\",\n",
-       "    \"n_positions\": 512,\n",
-       "    \"no_repeat_ngram_size\": 0,\n",
-       "    \"num_beam_groups\": 1,\n",
-       "    \"num_beams\": 1,\n",
-       "    \"num_decoder_layers\": 12,\n",
-       "    \"num_heads\": 12,\n",
-       "    \"num_layers\": 12,\n",
-       "    \"num_return_sequences\": 1,\n",
-       "    \"output_attentions\": false,\n",
-       "    \"output_hidden_states\": false,\n",
-       "    \"output_past\": true,\n",
-       "    \"output_scores\": false,\n",
-       "    \"pad_token_id\": 0,\n",
-       "    \"prefix\": null,\n",
-       "    \"problem_type\": null,\n",
-       "    \"pruned_heads\": {},\n",
-       "    \"relative_attention_max_distance\": 128,\n",
-       "    \"relative_attention_num_buckets\": 32,\n",
-       "    \"remove_invalid_values\": false,\n",
-       "    \"repetition_penalty\": 1.0,\n",
-       "    \"return_dict\": true,\n",
-       "    \"return_dict_in_generate\": false,\n",
-       "    \"sep_token_id\": null,\n",
-       "    \"suppress_tokens\": null,\n",
-       "    \"task_specific_params\": {\n",
-       "      \"summarization\": {\n",
-       "        \"early_stopping\": true,\n",
-       "        \"length_penalty\": 2.0,\n",
-       "        \"max_length\": 200,\n",
-       "        \"min_length\": 30,\n",
-       "        \"no_repeat_ngram_size\": 3,\n",
-       "        \"num_beams\": 4,\n",
-       "        \"prefix\": \"summarize: \"\n",
-       "      },\n",
-       "      \"translation_en_to_de\": {\n",
-       "        \"early_stopping\": true,\n",
-       "        \"max_length\": 300,\n",
-       "        \"num_beams\": 4,\n",
-       "        \"prefix\": \"translate English to German: \"\n",
-       "      },\n",
-       "      \"translation_en_to_fr\": {\n",
-       "        \"early_stopping\": true,\n",
-       "        \"max_length\": 300,\n",
-       "        \"num_beams\": 4,\n",
-       "        \"prefix\": \"translate English to French: \"\n",
-       "      },\n",
-       "      \"translation_en_to_ro\": {\n",
-       "        \"early_stopping\": true,\n",
-       "        \"max_length\": 300,\n",
-       "        \"num_beams\": 4,\n",
-       "        \"prefix\": \"translate English to Romanian: \"\n",
-       "      }\n",
-       "    },\n",
-       "    \"temperature\": 1.0,\n",
-       "    \"tf_legacy_loss\": false,\n",
-       "    \"tie_encoder_decoder\": false,\n",
-       "    \"tie_word_embeddings\": true,\n",
-       "    \"tokenizer_class\": null,\n",
-       "    \"top_k\": 50,\n",
-       "    \"top_p\": 1.0,\n",
-       "    \"torch_dtype\": null,\n",
-       "    \"torchscript\": false,\n",
-       "    \"typical_p\": 1.0,\n",
-       "    \"use_bfloat16\": false,\n",
-       "    \"use_cache\": true,\n",
-       "    \"vocab_size\": 32128\n",
-       "  },\n",
-       "  \"torch_dtype\": \"float32\",\n",
-       "  \"transformers_version\": \"4.38.2\"\n",
-       "}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '7100 (Python 3.9.19)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -p /home/hice1/ywu3038/scratch/.conda/envs/7100 ipykernel --update-deps --force-reinstall'"
+     ]
     }
    ],
    "source": [
-    "repr_extrat.model.config"
+    "import os\n",
+    "import pickle\n",
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "\n",
+    "def process_directory(input_dir, output_base_dir):\n",
+    "    for filename in tqdm(os.listdir(input_dir)):\n",
+    "        if filename.endswith('.pkl'):\n",
+    "            input_path = os.path.join(input_dir, filename)\n",
+    "            \n",
+    "            with open(input_path, 'rb') as f:\n",
+    "                data = pickle.load(f)\n",
+    "            \n",
+    "            repr_data = data['repr']\n",
+    "            num_layers = repr_data.shape[0]\n",
+    "            \n",
+    "            for layer in range(num_layers):\n",
+    "                layer_data = repr_data[layer]  # Shape: [seq_len, dim]\n",
+    "                \n",
+    "                output_dir = os.path.join(output_base_dir, str(layer))\n",
+    "                os.makedirs(output_dir, exist_ok=True)\n",
+    "                \n",
+    "                output_path = os.path.join(output_dir, filename)\n",
+    "                \n",
+    "                with open(output_path, 'wb') as f:\n",
+    "                    pickle.dump({'repr': layer_data, 'meta': data['meta']}, f)\n",
+    "\n",
+    "def main():\n",
+    "    base_input_dir = '/home/hice1/ywu3038/scratch/GTZAN/MusicGenSmall'\n",
+    "    base_output_dir = '/home/hice1/ywu3038/scratch/GTZAN/MusicGenSmall'\n",
+    "    \n",
+    "    for split in ['train', 'valid', 'test']:\n",
+    "        print(f\"Processing {split} directory...\")\n",
+    "        input_dir = os.path.join(base_input_dir, split)\n",
+    "        output_dir = os.path.join(base_output_dir, split)\n",
+    "        process_directory(input_dir, output_dir)\n",
+    "    \n",
+    "    print(\"Processing complete!\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
@@ -473,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
